# captain

./: .gitignore  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  IDENTITY.md  LICENSE  README.md  SECURITY.md  TOOLS.md  USER.md  WORKSPACE_STRUCTURE.md  __init__.py  install.sh  lint.sh  run_lint.sh
.openclaw/: workspace-state.json
captain/: MAINTAINERS  (+1 more)
rust-harness/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  ROADMAP.md  RUNBOOK.md  config.example.toml  start.sh
rust-harness/.harness/: README.md  coding-progress.json  forced-mutations.md
rust-harness/.harness/discriminator-captures/20260301-204338/: metadata.json
rust-harness/.harness/discriminator-captures/20260301-204736/: metadata.json
rust-harness/.harness/discriminator-captures/20260301-205245/: metadata.json
rust-harness/code/: README.md
rust-harness/code/policies/: commit-quality.md
rust-harness/fixtures/: bad_run_missing_finish.jsonl  objectives.txt
rust-harness/scripts/: build.sh  check_toolchain.sh  discriminator-capture-latest.sh  discriminator-capture-run.sh  dogfood.sh  dual_loop.py  eval_coding_run.py  events-pretty.sh  follow-latest-run.sh  harness.sh
rust-harness/src/: coding.rs  commit_subject_quality.rs  config.rs  eval.rs  events.rs  lib.rs  main.rs  orchestrator.rs  provider.rs  replay.rs  runtime_gate.rs  scheduler.rs  tools.rs
rust-harness/src/code/: apply.rs  diff.rs  engine.rs  planner.rs
rust-harness/tests/: commit_subject_quality_gate_v2.rs
rust-harness/toolsets/code/: README.md
rust-harness/toolsets/code/prompts/: diff.md
(+223 files in other folders)
